[tool.poetry]
name = "resume-analyzer"
version = "0.1.0"
description = "Resume analyzer with BERT."
authors = ["Robert Feconda"]
license = "GNU General Public License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
